[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = ""
version = "1.4.2"
authors = [
  { name="Daniel Thomas", email="dthomas4884@floridapoly.edu"
    name="Daniel Hamilton", email="dhamilton5434@floridapoly.edu" },
]
description = "CS-Project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DaUneasyBat/CS-Project"

